tests/baselines/reference/duplicateConstructorOverloadSignature2.errors.txt
==== tests/cases/compiler/duplicateConstructorOverloadSignature2.ts (1 errors) ====
    class C<T> {
        constructor(x: T);
        constructor(x: T);
        ~~~~~~~~~~~~~~~~~~
!!! error TS2145: Duplicate constructor overload signature.
        constructor(x: any) { }
    }